# template-python-project

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  genindex.html  index.html  my_matplotlib_style.mplstyle  objects.inv  poetry.toml  py-modindex.html  pyproject.toml  search.html  searchindex.js  tox.ini
.doctrees/: environment.pickle  index.doctree
.doctrees/bibliography/: index.doctree
.doctrees/feature_1/: api.doctree  definition.doctree  index.doctree
.github/workflows/: ci.yml  docs.yml  main.yml
_modules/: index.html
_modules/packagename/: operations.html
_sources/: index.rst.txt
_sources/feature_1/: definition.rst.txt  index.rst.txt
bibliography/: index.html
docs/: conf.py
docs/bibliography/: bibliography.bib
docs/feature_1/: api.rst
feature_1/: api.html  definition.html  index.html
notebooks/: README.md  example.ipynb
src/packagename/: __init__.py  operations.py
src/packagename/data/: load_data.py  mock.pkl
tests/: test_addition.py  test_load_data.py  test_raise_error.py
